samples/_failures_safe/1761188017_407acf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6e225d7e.c: In function ‘tokenize’:
./samples/SAFE/__tmp_6e225d7e.c:169:9: error: expected declaration or statement at end of input
  169 |         }
      |         ^
./samples/SAFE/__tmp_6e225d7e.c:169:9: error: expected declaration or statement at end of input
